--- a/vulners_report_template.html
+++ b/vulners_report_template.html
@@ -1,8 +1,19 @@
 <style>
+    table {
+        width: 80%;
+        margin-right: auto;
+        margin-left: auto;
+        table-layout: fixed;
+    }
+    
+    td, th {
+        word-wrap:break-word;
+    }
     table, th, td {
         border: 1px solid black;
        }
 </style>
+
 
 <h2> Vulners References for {{ cve_id }}</h2>
 <h3>Bulletins count</h3>
