--- a/vulners_report_template.html
+++ b/vulners_report_template.html
@@ -1,4 +1,58 @@
 <style>
+.table_blur, .counter {
+  background: #f5ffff;
+  border-collapse: collapse;
+  text-align: left;
+}
+.table_blur th {
+  border-top: 1px solid #777777;
+  border-bottom: 1px solid #777777;
+  box-shadow: inset 0 1px 0 #999999, inset 0 -1px 0 #999999;
+  background: linear-gradient(#9595b6, #5a567f);
+  color: white;
+  padding: 10px 15px;
+  position: relative;
+}
+.table_blur th:after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 25%;
+  height: 25%;
+  width: 100%;
+  background: linear-gradient(rgba(255, 255, 255, 0), rgba(255,255,255,.08));
+}
+.table_blur tr:nth-child(odd) {
+  background: #ebf3f9;
+}
+.table_blur th:first-child {
+  border-left: 1px solid #777777;
+  border-bottom:  1px solid #777777;
+  box-shadow: inset 1px 1px 0 #999999, inset 0 -1px 0 #999999;
+}
+.table_blur th:last-child {
+  border-right: 1px solid #777777;
+  border-bottom:  1px solid #777777;
+  box-shadow: inset -1px 1px 0 #999999, inset 0 -1px 0 #999999;
+}
+.table_blur td {
+  border: 1px solid #e3eef7;
+  padding: 10px 15px;
+  position: relative;
+  transition: all 0.5s ease;
+}
+.table_blur tbody:hover td {
+  color: transparent;
+  text-shadow: 0 0 3px #a09f9d;
+}
+.table_blur tbody:hover tr:hover td {
+  color: #444444;
+  text-shadow: none;
+}
+
+
+
 
     .counter{
         width: 50%;
@@ -29,7 +83,8 @@
 <h1> Vulners References for {{ cve_id }}</h1>
 <hr/>
 <h2>Bulletins count</h2>
-<table class="counter">
+<table class="table_blur">
+    <tr><th>Bulletin Family</th><th>Count</th></tr>
 {% for i in metadata['bulletinFamily'] %}
     <tr><td><a href="#{{ i }}">{{ i }}</a></td><td>{{ metadata['bulletinFamily'][i] }}</td></tr>
 {% endfor %}
@@ -37,7 +92,7 @@
 {% for bulletinFamily in bulletins %}
 <hr/>
 <h2 id="{{ bulletinFamily }}">{{ bulletinFamily }}</h2>
-<table>
+<table class="table_blur">
     <tr>
         <th>id</th>
         <th>Title</th>
@@ -47,10 +102,10 @@
 
     {% for bulletin in bulletins[bulletinFamily] %}
     <tr>
-        <th>{{ bulletin['id'] }}</th>
-        <th>{{ bulletin['title'] }}</th>
-        <th>{{ bulletin['type'] }}</th>
-        <th><a href="{{ bulletin['href'] }}" target="_blank">{{ bulletin['href'] }}</a></th>
+        <td>{{ bulletin['id'] }}</td>
+        <td>{{ bulletin['title'] }}</td>
+        <td>{{ bulletin['type'] }}</td>
+        <td><a href="{{ bulletin['href'] }}" target="_blank">{{ bulletin['href'] }}</a></td>
     </tr>
     {% endfor %}
 </table>
