--- a/vulners_report_template.html
+++ b/vulners_report_template.html
@@ -1,4 +1,8 @@
 <style>
+
+*{
+    font-family: "Lucida Console", "Courier New", monospace;
+}
 .table_blur, .counter {
   background: #f5ffff;
   border-collapse: collapse;
